Add customization option for noevac tile painting

--- a/Config/XComEvacAll.ini
+++ b/Config/XComEvacAll.ini
@@ -16,3 +16,9 @@
 ; leading to a louder, overlapped sound. This doesn't occur with the
 ; eOneByOne mode. I am still looking into a fix for this issue.
 EvacMode=eAllAtOnce
+
+[EvacAll.UIScreenListener_TacticalHUD_EvacAll]
+
+; Configure whether or not the mod will paint blocked evac tiles in
+; the evac zone with a "NoEvac" overlay.
+ShowNoEvacTiles=true
