Use OnPostTemplatesCreated to give ability
Now uses the OnPostTemplatesCreated hook to award the EvacAll ability to an arbitrary list of character
templates instead of assigning the ability to all members of the XCom squad on mission start via
the tactical HUD listener. The old code is still present to handle old campaigns where characters have
been created before this update to mod their templates.

This approach has several advantages:

- It works with mods that enable mission restart on more missions - the old code in the tactical listener
  would not fire after a mission restart so the ability may not be present.
- It works with an arbitrary list of character templates, so is more mod-friendly for new types of VIPs
  and allows VIPs that were not in the squad at mission start to have the ability.
- It's just cleaner. This is how it should've been done in the first place, if that hook had existed
  in the beginning.

--- a/Config/XComEvacAll.ini
+++ b/Config/XComEvacAll.ini
@@ -22,3 +22,12 @@ EvacMode=eAllAtOnce
 ; Configure whether or not the mod will paint blocked evac tiles in
 ; the evac zone with a "NoEvac" overlay.
 ShowNoEvacTiles=true
+
+
+[EvacAll.X2DownloadableContentInfo_EvacAll]
+
+; Configurable list of character templates that should be granted the Evac All ability.
++CharacterTemplates="Soldier"
++CharacterTemplates="Soldier_VIP"
++CharacterTemplates="Scientist_VIP"
++CharacterTemplates="Engineer_VIP"
