Better mod support
Instead of just using a configurable list of template names to which to add the
ability, scan all character templates and add EvacAll to any that has the Evac
ability. The config list is still respected to add the ability to other types
if desired.

Fix a bug preventing character templates from all difficulties from being updated.

Removed legacy code for the old pre Alien Hunters listener implementation. Only
PostTemplatesCreated is used now.

--- a/Config/XComEvacAll.ini
+++ b/Config/XComEvacAll.ini
@@ -27,7 +27,7 @@ ShowNoEvacTiles=true
 [EvacAll.X2DownloadableContentInfo_EvacAll]
 
 ; Configurable list of character templates that should be granted the Evac All ability.
-+CharacterTemplates="Soldier"
-+CharacterTemplates="Soldier_VIP"
-+CharacterTemplates="Scientist_VIP"
-+CharacterTemplates="Engineer_VIP"
+; All character templates with the 'Evac' ability are automatically also granted EvacAll.
+; Only characters that don't have Evac need to be added here if you want them to have
+; EvacAll for some reason.
+
