--- a/Config/XComEvacAll.ini
+++ b/Config/XComEvacAll.ini
@@ -26,6 +26,9 @@ ShowNoEvacTiles=true
 
 [EvacAll.X2DownloadableContentInfo_EvacAll]
 
+;enable logging
+bEnableLogging = false
+
 ; Configurable list of character templates that should be granted the Evac All ability.
 ; All character templates with the 'Evac' ability are automatically also granted EvacAll.
 ; Only characters that don't have Evac need to be added here if you want them to have
